CSS alignment fix and added Brendan

--- a/src/App.css
+++ b/src/App.css
@@ -86,9 +86,8 @@ body {
     }
 
 .students-container {
-  display:flex;
-  justify-content: space-around;
-  /*flex-direction: column;*/
+  display:flex;  
+  justify-content: center;
   flex-wrap: wrap;
 }
 
